@@ -13,8 +13,7 @@
     <description  xmlns="http://www.w3.org/1999/xhtml">
         <p>Specify the colours used for drawing the global elements of the map.</p>
         <p>red, green and blue are numbers from 0 to 255.</p>
-        <p>LABELFONTSHADOWCOLOR, LABELBGCOLOR and LABELOUTLINECOLOR have an additional option - 'none' - which stops that element of the LABEL being drawn. LABELFONTSHADOWCOLOR defaults to 'none'.</p>
-    </description>
+	</description>
     <changes>
     <change version="0.8">Added TIMECOLOR, TITLECOLOR, KEYTEXTCOLOR, KEYOUTLINECOLOR and KEYBGCOLOR.</change>
     <change version="0.7">Added BGCOLOR.</change>
